# telegram-files-sync

./: .gitignore  Cargo.toml  Makefile  files.sqlite
config/: example.yaml
migration/: Cargo.toml
migration/src/: lib.rs  m20240224_192755_create_node_table.rs
migrations/2024-02-27-141821_create_node/: up.sql
src/: client_factory.rs  db.rs  main.rs  schema.rs  settings.rs  synced_fs.rs
src/models/: node.rs
src/utils/: datetime_into_timespec.rs  mod.rs  prompt.rs
