[package]
name = "telegram-files-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.14.0", features = ["yaml"] }
fuse = "0.3.1"
futures = "0.3.30"
futures-util = "0.3.30"
grammers-client = "0.5.0"
grammers-session = "0.5.1"
grammers-tl-types = "0.5.1"
libc = "0.2.153"
log = "0.4.20"
rand = "0.8.5"
sea-orm = { version = "0.12.14", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-chrono"] }
serde = { version = "1.0.196", features = ["serde_derive"] }
simple_logger = "4.3.3"
tokio = { version = "1.36.0", features = ["fs", "rt", "signal"] }
